<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="#2f2e2d">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:id="@+id/dateLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/hourSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/minuteSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="40dp"
            android:id="@+id/apmSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="40dp"
            android:id="@+id/daySpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3.2"
            android:layout_height="40dp"
            android:id="@+id/monthSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/siteText"
        android:text="@string/site"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/dateLayout"
        android:layout_centerHorizontal="true"
        android:textColor="#fffa00"
        android:editable="false"
        android:layout_marginBottom="-60dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Arriving"
        android:id="@+id/arriving"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#222120"
        android:textColor="#fffa00"
        android:textSize="18sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Leaving"
        android:id="@+id/leaving"
        android:layout_below="@+id/arriving"
        android:layout_alignRight="@+id/arriving"
        android:layout_alignEnd="@+id/arriving"
        android:layout_marginTop="30dp"
        android:background="#222120"
        android:textColor="#fffa00"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/leaving"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Get a rating"
        android:id="@+id/titleText"
        android:background="#2f2e2d"
        android:textColor="#fffa00"
        android:textSize="20sp"
        android:editable="false"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/mapSpinner"
        android:spinnerMode="dropdown"
        android:background="#2f2e2d"
        android:layout_above="@id/dateLayout">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:id="@+id/suggestLayout"
        android:layout_above="@id/mapSpinner">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:id="@+id/sugLotText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/sug"
            android:hint="@string/besthint"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="40dp"
            android:id="@+id/sugLotValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:id="@+id/rateText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/rating"
            android:hint="@string/ratehint"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:id="@+id/rateValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:id="@+id/outputLayout"
        android:layout_above="@id/suggestLayout">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:id="@+id/curLotText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/curLot"
            android:hint="@string/lothint"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="40dp"
            android:id="@+id/curLotValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:hint="@string/lothint"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:id="@+id/ratingText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:text="@string/rating"
            android:hint="@string/ratehint"
            android:editable="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:id="@+id/ratingValueText"
            android:background="#2f2e2d"
            android:textColor="#fffa00"
            android:textSize="20sp"
            android:editable="false"/>
    </LinearLayout>

</RelativeLayout>