<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.sixpts.CheckAvail"
    android:background="#2f2e2d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleText"
        android:text="@string/selectALot"
        android:textSize="20sp"
        android:textColor="#fffa00"
        android:editable="false"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/mapSpinner"
        android:spinnerMode="dropdown"
        android:background="#2f2e2d"
        android:layout_below="@id/titleText"
        android:layout_marginTop="15dp">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:id="@+id/dateLayout"
        android:layout_below="@id/mapSpinner">

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/hourSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:id="@+id/minuteSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="40dp"
            android:id="@+id/apmSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="40dp"
            android:id="@+id/daySpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3.2"
            android:layout_height="40dp"
            android:id="@+id/monthSpinner"
            android:spinnerMode="dropdown"
            android:background="#282726"
            android:layout_marginBottom="38dp">
        </Spinner>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedText"
        android:text="@string/chosenLot"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dateLayout"
        android:layout_marginTop="10dp"
        android:textColor="#fffa00"
        android:editable="false"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentLotLayout"
        android:layout_below="@id/selectedText"
        android:layout_marginTop="10dp">

        <ProgressBar
            style="@style/thickerBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/currentLotBar"
            android:max="100"
            android:progressTint="#fffa00"
            android:progress="50"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="50"
            android:textSize="20sp"
            android:textColor="#2f2e2d"
            android:textStyle="bold"
            android:editable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/fullness"
            android:textSize="20sp"
            android:textColor="#2f2e2d"
            android:textStyle="bold"
            android:editable="false" />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentLotLayout"
        android:layout_marginTop="10dp"
        android:id="@+id/sugTextLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/bestText"
            android:text="@string/best"
            android:textSize="20sp"
            android:textColor="#fffa00"
            android:editable="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="8"
            android:id="@+id/lotText"
            android:text="Special Events"
            android:textSize="20sp"
            android:textColor="#fffa00"
            android:editable="false"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/suggestBarLayout"
        android:layout_below="@id/sugTextLayout"
        android:layout_marginTop="10dp">

        <ProgressBar
            style="@style/thickerBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/suggestedLotBar"
            android:max="100"
            android:progressTint="#fffa00"
            android:progress="50"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="50"
                android:textSize="20sp"
                android:textColor="#2f2e2d"
                android:textStyle="bold"
                android:editable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:text="@string/fullness"
                android:textSize="20sp"
                android:textColor="#2f2e2d"
                android:textStyle="bold"
                android:editable="false" />
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggestBarLayout"
        android:layout_marginTop="25dp"
        android:id="@id/iconImage"
        android:background="@drawable/icon"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/siteText"
        android:text="@string/site"
        android:textSize="12sp"
        android:textColor="#fffa00"
        android:editable="false"/>
</RelativeLayout>
